Add bnf grammar to v0.1 spec (#7)
* add bnf grammar to v0.1 spec
* add escape sequences documentation for single line strings
* Better syntax highlighting for tokenizer, whitespace+ before comment
* fix: float & multi-line string grammar
* add v0.2.0 spec
* only support uppercase letters in hex numbers
* read exponent as float and not int (for negative exp like 1e-10)

--- a/content/specifications/v0.2.0.md
+++ b/content/specifications/v0.2.0.md
@@ -1,12 +1,12 @@
 +++
-title = "HUML specification v0.1.0"
-description = "HUML language specification v0.1.0"
+title = "HUML specification v0.2.0"
+description = "HUML language specification v0.2.0"
 
 [extra]
 toc = true
 +++
 
-# HUML specification v0.1.0 <sup class="tag">Experimental</sup>
+# HUML specification v0.2.0 <sup class="tag">Experimental</sup>
 
 HUML is a machine-readable markup language with a focus on readability by humans. It borrows YAML's visual appearance, but avoids its complexities, ambiguities, and dangerous footguns. It is very strict about indentation and spaces specifically to ensure consistent form across contexts for readability.
 
@@ -18,7 +18,7 @@ HUML is tailored for configuration, documents, and datasets.
 * UTF-8 encoding.
 * Line breaks: Unix-style (`\n`).
 * Blank lines are ignored.
-* Optional version directive at the top: `%HUML <version>` (e.g., `%HUML v0.1.0`). If this is not present, a parser is to apply the latest version of the specification.
+* Optional version directive at the top: `%HUML <version>` (e.g., `%HUML v0.2.0`). If this is not present, a parser is to apply the latest version of the specification.
 
 ## Data types
 
@@ -28,7 +28,7 @@ HUML supports scalar (string, number, bool, null) and vector (list, dict) data t
 | ----------- | ----------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------- |
 | **String**  | Only canonical (decoded) representation of Unicode strings. No `\u` or `\U` or any other escaped or encoded representations.        | Allowed: `"Hello 🌏"`<br>Not allowed: `"Hello \u1F30F"`    |
 |             | **Single-line string**: Always quoted with double quotes. `"` and `\` must be escaped.                                              | `"foo"`, `"Hello World"`, `"Hi \"all\""`, `"Back\\Slash"` |
-|             | **Multi-line string**: Wrapped in ```` (three backticks) to preserve spaces or `"""` (three double quotes) to strip them.           |                                                           |
+|             | **Multi-line string**: Wrapped in `"""` (three double quotes). Newlines at the beginning and end will be stripped.                  |                                                           |
 |             | Characters inside a multi-line string do not need to be escaped. Escape sequences with backslashes like `\n` are treated literally. |                                                           |
 | **Number**  | **Integer**                                                                                                                         | `123`, `+123`, `-123`                                     |
 |             | **Float** (64-bit, IEEE 754 double-precision floating-point)                                                                        | `3.14`, `-0.5`                                            |
@@ -121,18 +121,18 @@ Single-line strings may include the following formatting control characters usin
 
 ### Multi-line strings
 
-In multi-line string blocks, no escaping is necessary. Characters are treated literally. As the beginning and ending markers can be derived from the indentation, there is no need to escape the three double quotes or backticks themselves in the string content.
+In multi-line string blocks, no escaping is necessary. Characters are treated literally. As the beginning and ending markers can be derived from the indentation, there is no need to escape the three double quotes themselves in the string content.
 
-#### Preserve spaces: ******` ``` `******
-The content block must be indented by one level (2 spaces) relative to the key. These initial 2 spaces on each line is the minimum required indentation and is not considered as spaces. All other preceding and all trailing spaces are preserved as content. The opening indicator ******` ``` `****** must be after the indicator `:` separated by exactly one space. The closing indicator must be at the indentation level of the key.
+#### Preserve spaces: ******`"""`******
+The content block must be indented by one level (2 spaces) relative to the key. These initial 2 spaces on each line is the minimum required indentation and is not considered as spaces. All other preceding and all trailing spaces are preserved as content. The opening indicator ******`"""`****** must be after the indicator `:` separated by exactly one space. The closing indicator must be at the indentation level of the key.
 
 ````huml
-description: ```
+description: """
   Line 1
    Line 2
     Line 3
           All spaces are preserved.
-```
+"""
 ````
 
 is parsed as:
@@ -142,27 +142,6 @@ Line 1
  Line 2
   Line 3
         All spaces are preserved.
-```
-
-#### Strip spaces: ******`"""`******
-The content block must be indented by one level (2 spaces) relative to the key. All leading and trailing whitespace on each line of content is stripped. The opening indicator ******`"""`****** must be after the indicator `:` separated by exactly one space. The closing indicator must be at the indentation level of the key.
-
-
-```huml
-description: """
-  Line 1
-   Line 2
-    Line 3
-         All spaces are ignored.   
-"""
-```
-
-is parsed as:
-```
-Line 1
-Line 2
-Line 3
-All spaces are ignored.
 ```
 
 ------------
@@ -400,18 +379,11 @@ application_config::
   string_examples::
     simple_greeting: "Hello, \"Universe\"!"
     path_example: "C:\\Users\\Default\\Documents"
-    multiline_preserved_poem: ```
+    multiline_preserved_poem: """
       The HUML spec, so clear and bright,
         Makes data shine with pure delight.
       No ambiguity, no YAML fright,
       Just structured sense, and pure insight.
-    ```
-    multiline_stripped_script: """
-          #!/bin/bash
-          echo "Starting service..."
-          # This script has leading spaces stripped.
-            # Even this indented comment.
-          exit 0
     """
 
   # List variations
@@ -442,11 +414,11 @@ application_config::
       roles:: "web", "api" # Inline list
       status: "active"
       "metadata with space": "custom server info" # Quoted key
-      config_file_content: ```
+      config_file_content: """
         # Sample config for node-alpha-001
         port = 8080
         threads = 16
-      ```
+      """
     - :: # Second server node (dictionary)
       id: "node-beta-002"
       ip_address: "10.0.0.2"
@@ -567,18 +539,18 @@ simple_key = alpha ( alpha | digit | '_' | '-' )*;
 `curr_ind` is the current indentation level (in spaces).
 `curr_ind += 2` at each `INDENT` and `curr_ind -= 2` at each `DEDENT`.
 
-```ocaml
+```ebnf
 (* start of line handling: *)
-| '\n', whitespace*, comment                -> ignore
+| '\n', whitespace*, comment                -> skip & continue
 | '\n', ' '{curr_ind}                       -> NEWLINE
 | '\n', ' '{curr_ind+2}                     -> [NEWLINE, INDENT]
 | '\n', ' '{< curr_ind}                     -> [DEDENT (curr_ind - len(m)) / 2 times, NEWLINE]
 
 (* end of line handling: *)
-| whitespace+, comment                      -> ignore
+| whitespace*, comment                      -> skip & continue
 
 (* dict handling: *)
-| "::" (whitespace+, comment)?, '\n'        -> [MULTILINE_VECTOR_START, NEWLINE]
+| "::" (whitespace*, comment)?, '\n'        -> [MULTILINE_VECTOR_START, NEWLINE]
 | ":: "                                     -> INLINE_VECTOR_START
 
 (* numbers: *)
@@ -593,13 +565,9 @@ simple_key = alpha ( alpha | digit | '_' | '-' )*;
 
 (* strings *)
 | '"' ("\\\"" | [^ '\n' '"' ])* '"'         -> STRING(string)       # additionally, handle escape sequences
-| "\"\"\"", (whitespace+, comment)?, '\n'
+| "\"\"\"", (whitespace*, comment)?, '\n'
     | whitespace{curr_ind}, "\"\"\""        -> STRING(string[:-1])  # remove last '\n'
-    | s:[^ '\n']*, '\n'                     -> add (strip(s) + '\n') to string
-| "```", (whitespace+, comment?), '\n'
-    | whitespace{curr_ind}, "```"           -> STRING(string[:-1])  # remove last '\n'
-    | whitespace{curr_ind+2},
-        s:([^ '\n']*, '\n')                 -> add (s + '\n') to string
+    | s:[^ '\n']*, '\n'                     -> add (s + '\n') to string
 
 comment = "# ", [^ '\n']*
 whitespace = ' '
@@ -607,7 +575,7 @@ digit = ['0'-'9' '_']
 exp = 'e' ('+'|'-')? digit+
 ```
 
-### Escape sequences
+Escape sequences:
 - `\\` -> `\`
 - `\"` -> `"`
 - `\b` | `\n` | `\r` | `\f` | `\t` | `\v` -> [corresponding control characters](#Single-line-strings)
