--- a/content/specifications/v0.1.0.md
+++ b/content/specifications/v0.1.0.md
@@ -127,8 +127,8 @@ Single-line strings may include the following formatting control characters usin
 
 In multi-line string blocks, no escaping is necessary. Characters are treated literally. As the beginning and ending markers can be derived from the indentation, there is no need to escape the three double quotes or backticks themselves in the string content.
 
-#### Preserve spaces: ******` ``` `******
-The content block must be indented by one level (2 spaces) relative to the key. These initial 2 spaces on each line is the minimum required indentation and is not considered as spaces. All other preceding and all trailing spaces are preserved as content. The opening indicator ******` ``` `****** must be after the indicator `:` separated by exactly one space. The closing indicator must be at the indentation level of the key.
+#### Preserve spaces: ```` ``` ````
+The content block must be indented by one level (2 spaces) relative to the key. These initial 2 spaces on each line is the minimum required indentation and is not considered as spaces. All other preceding and all trailing spaces are preserved as content. The opening indicator ```` ``` ```` must be after the indicator `:` separated by exactly one space. The closing indicator must be at the indentation level of the key.
 
 ````huml
 description: ```
@@ -148,8 +148,8 @@ Line 1
         All spaces are preserved.
 ```
 
-#### Strip spaces: ******`"""`******
-The content block must be indented by one level (2 spaces) relative to the key. All leading and trailing whitespace on each line of content is stripped. The opening indicator ******`"""`****** must be after the indicator `:` separated by exactly one space. The closing indicator must be at the indentation level of the key.
+#### Strip spaces: `"""`
+The content block must be indented by one level (2 spaces) relative to the key. All leading and trailing whitespace on each line of content is stripped. The opening indicator `"""` must be after the indicator `:` separated by exactly one space. The closing indicator must be at the indentation level of the key.
 
 
 ```huml
