Make v0.2.0 the default latest spec.

--- a/content/specifications/v0.1.0.md
+++ b/content/specifications/v0.1.0.md
@@ -6,11 +6,15 @@ description = "HUML language specification v0.1.0"
 toc = true
 +++
 
-# HUML specification v0.1.0 <sup class="tag">Experimental</sup>
+> The latest specification is [v0.2.0](@/specifications/v0.2.0.md)
+
+# HUML specification v0.1.0
+<sup class="tag">Experimental</sup>
 
 HUML is a machine-readable markup language with a focus on readability by humans. It borrows YAML's visual appearance, but avoids its complexities, ambiguities, and dangerous footguns. It is very strict about indentation and spaces specifically to ensure consistent form across contexts for readability.
 
 HUML is tailored for configuration, documents, and datasets.
+
 
 
 ## Encoding and basic structure
