--- a/content/specifications/v0.2.0.md
+++ b/content/specifications/v0.2.0.md
@@ -6,7 +6,8 @@ description = "HUML language specification v0.2.0"
 toc = true
 +++
 
-# HUML specification v0.2.0 <sup class="tag">Experimental</sup>
+# HUML specification v0.2.0
+<sup class="tag">Experimental</sup>
 
 HUML is a machine-readable markup language with a focus on readability by humans. It borrows YAML's visual appearance, but avoids its complexities, ambiguities, and dangerous footguns. It is very strict about indentation and spaces specifically to ensure consistent form across contexts for readability.
 
@@ -579,3 +580,8 @@ Escape sequences:
 - `\\` -> `\`
 - `\"` -> `"`
 - `\b` | `\n` | `\r` | `\f` | `\t` | `\v` -> [corresponding control characters](#Single-line-strings)
+
+
+### Previous versions
+
+- [v0.1.0](@/specifications/v0.1.0.md)
