--- a/content/specifications/v0.1.0.md
+++ b/content/specifications/v0.1.0.md
@@ -239,7 +239,7 @@ empty_dict:: {}
 
 # Example
 
-## Why `::`?
+## Why `::`? {#why-two-colons}
 
 1) The indicator `::` immediately makes it apparent that what follows is a vector, to both human readers and parsers. Less guessing.
 
