Clarify multi-line string escape and whitespace rules

--- a/content/specifications/v0.2.0.md
+++ b/content/specifications/v0.2.0.md
@@ -18,7 +18,7 @@ HUML is tailored for configuration, documents, and datasets.
 
 * UTF-8 encoding.
 * Line breaks: Unix-style (`\n`).
-* Blank lines are ignored.
+* Blank lines are ignored (except in multi-line strings).
 * Optional version directive at the top: `%HUML <version>` (e.g., `%HUML v0.2.0`). If this is not present, a parser is to apply the latest version of the specification.
 
 ## Data types
@@ -30,7 +30,7 @@ HUML supports scalar (string, number, bool, null) and vector (list, dict) data t
 | **String**  | Only canonical (decoded) representation of Unicode strings. No `\u` or `\U` or any other escaped or encoded representations.        | Allowed: `"Hello 🌏"`<br>Not allowed: `"Hello \u1F30F"`    |
 |             | **Single-line string**: Always quoted with double quotes. `"` and `\` must be escaped.                                              | `"foo"`, `"Hello World"`, `"Hi \"all\""`, `"Back\\Slash"` |
 |             | **Multi-line string**: Wrapped in `"""` (three double quotes). Newlines at the beginning and end will be stripped.                  |                                                           |
-|             | Characters inside a multi-line string do not need to be escaped. Escape sequences with backslashes like `\n` are treated literally. |                                                           |
+|             | Characters inside a multi-line string cannot be escaped. Escape sequences with backslashes like `\n` are treated literally. |                                                           |
 | **Number**  | **Integer**                                                                                                                         | `123`, `+123`, `-123`                                     |
 |             | **Float** (64-bit, IEEE 754 double-precision floating-point)                                                                        | `3.14`, `-0.5`                                            |
 |             | **Special values**. The special numerical values are unquoted.                                                                      | `nan`, `inf`, `+inf`, `-inf`                              |
