Fix anchor link
Anchor text is all-lower-case

--- a/content/specifications/v0.2.0.md
+++ b/content/specifications/v0.2.0.md
@@ -579,7 +579,7 @@ exp = 'e' ('+'|'-')? digit+
 Escape sequences:
 - `\\` -> `\`
 - `\"` -> `"`
-- `\b` | `\n` | `\r` | `\f` | `\t` | `\v` -> [corresponding control characters](#Single-line-strings)
+- `\b` | `\n` | `\r` | `\f` | `\t` | `\v` -> [corresponding control characters](#single-line-strings)
 
 
 ### Previous versions
