Clarify multi-line string escape and whitespace rules (#15)
Co-authored-by: Kailash Nadh <kailash@nadh.in>

--- a/content/specifications/v0.2.0.md
+++ b/content/specifications/v0.2.0.md
@@ -18,7 +18,7 @@ HUML is tailored for configuration, documents, and datasets.
 
 * UTF-8 encoding.
 * Line breaks: Unix-style (`\n`).
-* Blank lines are ignored.
+* Blank lines in the doc are ignored (except inside multi-line strings).
 * Optional version directive at the top: `%HUML <version>` (e.g., `%HUML v0.2.0`). If this is not present, a parser is to apply the latest version of the specification.
 
 ## Data types
